:construction: improve GradlePlugin